Add simulation and tests for it